package ma.farm.dao;

public class ChickenDAO {
}
