package ma.farm.dao;

public class EquipmentDAO {
}
