package ma.farm.dao;

public class MortalityDAO {
}
