@startuml Diagram_2_Data_Access_Layer

title Diagram 2: Data Access Layer (DAOs + DatabaseConnection)

' ========================================
' DAO CLASSES (Data Access Layer)
' ========================================

class DatabaseConnection {
  - {static} instance: DatabaseConnection
  - connection: Connection
  - dbPath: String
  --
  - DatabaseConnection()
  --
  + {static} getInstance(): DatabaseConnection
  + getConnection(): Connection
  + closeConnection(): void
  + initializeDatabase(): void
}

class UserDAO {
  - connection: Connection
  --
  + UserDAO()
  --
  + authenticate(email: String, password: String): User
  + getUserByEmail(email: String): User
  + updateLastLogin(userID: String): void
}

class HouseDAO {
  - connection: Connection
  --
  + HouseDAO()
  --
  + getAllHouses(): List<House>
  + getHouseById(houseID: String): House
  + getHouseByNumber(houseNumber: int): House
  + updateHouse(house: House): void
  + getChickenCount(houseID: String): int
  + getAverageAge(houseID: String): int
}

class ChickenDAO {
  - connection: Connection
  --
  + ChickenDAO()
  --
  + addChickens(chickens: List<Chicken>): void
  + getChickensByHouse(houseID: String): List<Chicken>
  + getTotalCount(): int
  + updateChicken(chicken: Chicken): void
  + deleteChicken(chickenID: String): void
  + transferChickens(fromHouseID: String, toHouseID: String, count: int): void
}

class MortalityDAO {
  - connection: Connection
  --
  + MortalityDAO()
  --
  + recordMortality(mortality: Mortality): void
  + getDeathsToday(): int
  + getDeathsThisWeek(): int
  + getDeathsThisMonth(): int
  + getMortalityByHouse(houseID: String): List<Mortality>
  + getMortalityRate(houseID: String, days: int): double
}

class EggProductionDAO {
  - connection: Connection
  --
  + EggProductionDAO()
  --
  + recordProduction(production: EggProduction): void
  + getTodayProduction(): int
  + getProductionByHouse(houseID: String): int
  + getLast7DaysProduction(): List<EggProduction>
  + getTotalEggsInStorage(): int
  + addEggsToStorage(quantity: int): void
  + removeEggsFromStorage(quantity: int): void
}

class FeedDAO {
  - connection: Connection
  --
  + FeedDAO()
  --
  + getAllFeed(): List<Feed>
  + getFeedByType(feedType: FeedType): Feed
  + addFeed(feedType: FeedType, quantity: double): void
  + useFeed(feedType: FeedType, quantity: double): void
  + updateFeed(feed: Feed): void
}

class MedicationDAO {
  - connection: Connection
  --
  + MedicationDAO()
  --
  + getAllMedications(): List<Medication>
  + getMedicationById(medicationID: String): Medication
  + addMedication(medication: Medication): void
  + useMedication(medicationID: String, quantity: int): void
  + updateMedication(medication: Medication): void
  + deleteMedication(medicationID: String): void
  + getLowStockCount(): int
  + getExpiredMedications(): List<Medication>
}

class EquipmentDAO {
  - connection: Connection
  --
  + EquipmentDAO()
  --
  + getAllEquipment(): List<Equipment>
  + getEquipmentById(equipmentID: String): Equipment
  + addEquipment(equipment: Equipment): void
  + updateEquipment(equipment: Equipment): void
  + deleteEquipment(equipmentID: String): void
}

class TaskDAO {
  - connection: Connection
  --
  + TaskDAO()
  --
  + getAllTasks(): List<Task>
  + getTaskById(taskID: String): Task
  + createTask(task: Task): void
  + updateTask(task: Task): void
  + deleteTask(taskID: String): void
  + getTasksByStatus(status: TaskStatus): List<Task>
  + getTasksByPersonnel(personnelID: String): List<Task>
}

class PersonnelDAO {
  - connection: Connection
  --
  + PersonnelDAO()
  --
  + getAllPersonnel(): List<Personnel>
  + getPersonnelById(personnelID: String): Personnel
  + addPersonnel(personnel: Personnel): void
  + updatePersonnel(personnel: Personnel): void
  + deletePersonnel(personnelID: String): void
  + getPersonnelByRole(role: PersonnelRole): List<Personnel>
}

' ========================================
' DAO to DatabaseConnection
' ========================================

UserDAO --> DatabaseConnection : uses
HouseDAO --> DatabaseConnection : uses
ChickenDAO --> DatabaseConnection : uses
MortalityDAO --> DatabaseConnection : uses
EggProductionDAO --> DatabaseConnection : uses
FeedDAO --> DatabaseConnection : uses
MedicationDAO --> DatabaseConnection : uses
EquipmentDAO --> DatabaseConnection : uses
TaskDAO --> DatabaseConnection : uses
PersonnelDAO --> DatabaseConnection : uses

note bottom of DatabaseConnection
  <b>Singleton pattern</b>
  SQLite database
  Path: database/farm.db
  
  Initializes schema on first run
end note

note top of UserDAO
  <b>All DAOs follow same pattern:</b>
  1. Get connection from DatabaseConnection
  2. Execute SQL queries
  3. Map ResultSet to model objects
  4. Return data to controllers
end note

@enduml